Intiiall add all Files

--- a/about.html
+++ b/about.html
@@ -144,14 +144,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<ul>
 									<li><a href="#" class="linkedin"></a></li>
 									<li><a href="#" class="google"></a></li>
-									<li><a href="#" class="twitter"></a></li>
 									<li><a href="#" class="facebook"></a></li>
 								</ul>
 							</div>
-							<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+							<p></p>
 						</div>
 					</div>
-					<h4>Mariya Thomas</h4>
+					<h4>Talal J. Sammour</h4>
 					<p>Games Designer</p>
 				</div>
 				<div class="col-md-3 w3l_team_grid">
@@ -170,46 +169,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
 						</div>
 					</div>
-					<h4>Dino Jass</h4>
-					<p>Games Designer</p>
-				</div>
-				<div class="col-md-3 w3l_team_grid">
-					<div class="view view-second">
-						<img src="images/t3.jpg" alt=" " class="img-responsive" />
-						<div class="mask"></div>
-						<div class="content">
-							<div class="w3l_social_icons w3l_social_icons1">
-								<ul>
-									<li><a href="#" class="linkedin"></a></li>
-									<li><a href="#" class="google"></a></li>
-									<li><a href="#" class="twitter"></a></li>
-									<li><a href="#" class="facebook"></a></li>
-								</ul>
-							</div>
-							<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
-						</div>
-					</div>
-					<h4>Michael Doe</h4>
-					<p>Games Designer</p>
-				</div>
-				<div class="col-md-3 w3l_team_grid">
-					<div class="view view-second">
-						<img src="images/t4.jpg" alt=" " class="img-responsive" />
-						<div class="mask"></div>
-						<div class="content">
-							<div class="w3l_social_icons w3l_social_icons1">
-								<ul>
-									<li><a href="#" class="linkedin"></a></li>
-									<li><a href="#" class="google"></a></li>
-									<li><a href="#" class="twitter"></a></li>
-									<li><a href="#" class="facebook"></a></li>
-								</ul>
-							</div>
-							<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
-						</div>
-					</div>
-					<h4>Rita James</h4>
-					<p>Games Designer</p>
+					<h4>Osama K. Alzoubi</h4>
+					<p>Games Developer</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -225,19 +186,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h4>Contact</h4>
 			<ul>
 				<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></li>
-				<li><a href="mailto:example@mail.com"><h6>ex@mail.com</h6></a></li>
+				<li><a href="mailto:tjsummour17@gmail.com"><h6>tjsummour17@gmail.com</h6></a></li>
 			</ul>
 			<ul>
 				<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></li>
-				<li><h6>+18045678834</h6></li>
+				<li><h6>+962786642919</h6></li>
 			</ul>
 			<ul>
 				<li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></li>
-				<li><h6>4th Avenue,London</h6></li>
-			</ul>
-			<ul>
-				<li><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span></li>
-				<li><h6>(0033)6544 5453 644</h6></li>
+				<li><h6>Amman - Jordan</h6></li>
 			</ul>
 		</div>
 		<div class="col-md-5 footer-middle-w3">
@@ -274,9 +231,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<p class="agileinfo">Suspendisse convallis malesuada libero, non rutrum arcu pellentesque lacinia.</p>
 		</div>
 		<div class="clearfix"></div>
-		<div class="copyright">
-			<p>&copy; 2020 Kids Video Game. All Rights Reserved | Design by <a href="http://w3layouts.com/" target="_blank"> W3layouts </a></p>
-		</div>
 	</div>
 </div>
 <!-- //footer -->
