--- a/games.html
+++ b/games.html
@@ -1,11 +1,7 @@
-<!--A Design by W3layouts 
-Author: W3layout
-Author URL: http://w3layouts.com
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Kids Video Game a Games Category Flat Bootstrap responsive Website Template | Games:: w3layouts</title>
+<title>The Fallen Mage</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Kids Video Game Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
