Intiiall add all Files

--- a/about.html
+++ b/about.html
@@ -153,9 +153,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
         <h3>Our Team</h3>
         <div class="w3l_team_grids-agile">
-            <div class="col-md-3 w3l_team_grid">
+            <div class="col-md-2 w3l_team_grid">
                 <div class="view view-second">
-                    <img src="images/t1.jpg" alt=" " class="img-responsive"/>
+                    <img src="images/osama.png" alt=" " class="img-responsive"/>
                     <div class="mask"></div>
                     <div class="content">
                         <div class="w3l_social_icons w3l_social_icons1">
@@ -173,7 +173,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div class="col-md-3 w3l_team_grid">
                 <div class="view view-second">
-                    <img src="images/t2.jpg" alt=" " class="img-responsive"/>
+                    <img src="images/talal.png" alt=" " class="img-responsive"/>
                     <div class="mask"></div>
                     <div class="content">
                         <div class="w3l_social_icons w3l_social_icons1">
