Intiiall add all Files

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul class="nav navbar-nav navbar-right">
 						<li class="hover-effect"><a href="index.html">Home</a></li>
 						<li class="hover-effect"><a href="about.html">About</a></li>
-						<li class="hover-effect"><a href="games.html">Games</a></li>
+						<li class="hover-effect"><a href="games.html">Download</a></li>
 						<li class="hover-effect"><a href="news.html">News</a></li>
 						<li class="hover-effect active"><a href="contact.html">Contact</a></li>
 					</ul>
