--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hover-effect"><a href="index.html">Home</a></li>
                     <li class="hover-effect"><a href="about.html">About</a></li>
-<!--                    <li class="hover-effect"><a href="games.html">Games</a></li>-->
+                    <li class="hover-effect"><a href="games.html">Download</a></li>
                     <li class="hover-effect"><a href="news.html">News</a></li>
                     <li class="hover-effect"><a href="contact.html">Contact</a></li>
                 </ul>
@@ -92,33 +92,43 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </script>
 <!-- //Banner-Slider-JavaScript -->
 <!-- //Header -->
-
-<!-- trend -->
 <div class="trend-w3layouts">
     <div class="container">
-        <h2>Trending Games</h2>
+        <h2>Game Features</h2>
         <ul id="flexiselDemo1">
             <li>
                 <div class="trend-grid">
-                    <h4>Racing Games</h4>
+                    <h4>Character Leveling</h4>
                     <img src="images/tg1.jpg" alt=" " class="img-responsive"/>
                 </div>
             </li>
             <li>
                 <div class="trend-grid">
-                    <h4>3D Games</h4>
+                    <h4>Skill Tree</h4>
                     <img src="images/tg2.jpg" alt=" " class="img-responsive"/>
                 </div>
             </li>
             <li>
                 <div class="trend-grid">
-                    <h4>Action Games</h4>
+                    <h4>Inventory</h4>
                     <img src="images/tg3.jpg" alt=" " class="img-responsive"/>
                 </div>
             </li>
             <li>
                 <div class="trend-grid">
-                    <h4>Toy Games</h4>
+                    <h4>Currency</h4>
+                    <img src="images/tg4.jpg" alt=" " class="img-responsive"/>
+                </div>
+            </li>
+            <li>
+                <div class="trend-grid">
+                    <h4>Gear Enhancement</h4>
+                    <img src="images/tg4.jpg" alt=" " class="img-responsive"/>
+                </div>
+            </li>
+            <li>
+                <div class="trend-grid">
+                    <h4>Voice-Over</h4>
                     <img src="images/tg4.jpg" alt=" " class="img-responsive"/>
                 </div>
             </li>
