Add some modifications and features and upload the site to the server

--- a/about.html
+++ b/about.html
@@ -4,8 +4,7 @@
     <title>The Fallen Mage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="keywords" content="Kids Video Game Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"/>
+
     <script type="application/x-javascript"> addEventListener("load", function () {
         setTimeout(hideURLbar, 0);
     }, false);
@@ -41,7 +40,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="index.html"><h1>Kids <img src="images/c1.png" alt=" "/> Game</h1></a>
+                <a href="index.html"><h1>Fallen <img src="images/logo.png" alt=" "/> Mage</h1></a>
             </div>
 
             <div id="navbar" class="navbar-collapse collapse">
@@ -65,42 +64,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <h2>About Us</h2>
         <div class="about-grids-w3-agileits">
             <div class="col-md-6 about-grid-left-agileits-w3layouts">
-                <ul>
-                    <li><i>1.</i><a class="link link--kumya" href="single.html"><span
-                            data-letters="Qui ratione voluptatem dolores eos qui">Qui ratione voluptatem dolores</span></a>
-                    </li>
-                    <li><i>2.</i><a class="link link--kumya" href="single.html"><span
-                            data-letters="Dolores eos qui ratione voluptatem sequi">Dolores eos qui ratione volu</span></a>
-                    </li>
-                    <li><i>3.</i><a class="link link--kumya" href="single.html"><span
-                            data-letters="Voluptatem quia voluptas sit asper">Voluptatem quia voluptas sit asper</span></a>
-                    </li>
-                    <li><i>4.</i><a class="link link--kumya" href="single.html"><span
-                            data-letters="Consectetur adipiscing elit, incid">Consectetur adipiscing elit, incid</span></a>
-                    </li>
-                    <li><i>5.</i><a class="link link--kumya" href="single.html"><span
-                            data-letters="Quia voluptas sit aspernatur aut odit">Quia voluptas sit aspernatur aut</span></a>
-                    </li>
-                    <li><i>6.</i><a class="link link--kumya" href="single.html"><span
-                            data-letters="Eos qui ratione voluptatem sequi">Eos qui ratione voluptatem sequi</span></a>
-                    </li>
-                </ul>
+                <p style="font-size: large"><b>The Fallen Mage</b> is a fantasy based open-world game made with the
+                    Unity game engine and it’s about a wizard who used to be the king of <b>Pollentopes</b>. He had control
+                    over the four natural elements (air, water, fire and earth), but one day a deceptive witch called
+                    Rosaria promised him unlimited power by doing a certain ritual, which then he did, but little did he
+                    know that it was a trick which robbed him of all his abilities. The ritual’s true purpose was to
+                    lock the wizard’s abilities in four different monsters scattered across the land of Pollentopes in
+                    order to gain control over his kingdom.
+                    The wizard then finds himself without any powers in a distant village, and he has to face many
+                    challenges to gain back his powers and overthrow the deceptive witch and restore his throne.
+                </p>
             </div>
             <div class="col-md-6 about-grid-right-w3-agile">
                 <div class="grid-w3ls">
-                    <figure class="effect-zoe">
                         <img src="images/about.jpg" alt=" " class="img-responsive"/>
-                        <figcaption>
-                            <h3>Kids<span>Video</span>Game</h3>
-                            <p class="icon-links">
-                                <a href="#"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span></a>
-                            </p>
-                            <p class="description">Suspendisse convallis malesuada libero, non rutrum arcu pellentesque
-                                lacinia.</p>
-                        </figcaption>
-                    </figure>
                 </div>
             </div>
             <div class="clearfix"></div>
@@ -161,8 +138,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="w3l_social_icons w3l_social_icons1">
                             <ul>
                                 <li><a href="#" class="linkedin"></a></li>
-                                <li><a href="#" class="google"></a></li>
-                                <li><a href="#" class="facebook"></a></li>
+                                <li><a href="mailto:tjsummour17@gmail.com" class="google"></a></li>
+                                <li><a href="https://www.facebook.com/talal.sammour.9" class="facebook"></a></li>
                             </ul>
                         </div>
                         <p>You can use social media to contact with Talal.</p>
@@ -178,13 +155,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="content">
                         <div class="w3l_social_icons w3l_social_icons1">
                             <ul>
-                                <li><a href="#" class="linkedin"></a></li>
-                                <li><a href="#" class="google"></a></li>
-                                <li><a href="#" class="twitter"></a></li>
-                                <li><a href="#" class="facebook"></a></li>
+                                <li><a href="https://www.linkedin.com/in/osamaalzoubi/" class="linkedin"></a></li>
+                                <li><a href="mailto:osalzoubi@gmail.com" class="google"></a></li>
+                                <li><a href="https://www.facebook.com/osama4499" class="facebook"></a></li>
                             </ul>
                         </div>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+                        <p>You can use social media to contact with Osama.</p>
                     </div>
                 </div>
                 <h4>Osama K. Alzoubi</h4>
@@ -215,38 +191,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li><h6>Amman - Jordan</h6></li>
             </ul>
         </div>
-        <div class="col-md-5 footer-middle-w3">
-            <h4>Latest Games</h4>
-            <div class="col-md-3 img-w3-agile">
-                <a href="single.html"><img src="images/ng1.jpg" alt=" "/></a>
-            </div>
-            <div class="col-md-3 img-w3-agile">
-                <a href="single.html"><img src="images/ng2.jpg" alt=" "/></a>
-            </div>
-            <div class="col-md-3 img-w3-agile">
-                <a href="single.html"><img src="images/ng3.jpg" alt=" "/></a>
-            </div>
-            <div class="col-md-3 img-w3-agile">
-                <a href="single.html"><img src="images/ng4.jpg" alt=" "/></a>
-            </div>
-            <div class="col-md-3 img-w3-agile footer-middle-wthree">
-                <a href="single.html"><img src="images/ng5.jpg" alt=" "/></a>
-            </div>
-            <div class="col-md-3 img-w3-agile footer-middle-wthree">
-                <a href="single.html"><img src="images/ng6.jpg" alt=" "/></a>
-            </div>
-            <div class="col-md-3 img-w3-agile footer-middle-wthree">
-                <a href="single.html"><img src="images/ng7.jpg" alt=" "/></a>
-            </div>
-            <div class="col-md-3 img-w3-agile footer-middle-wthree">
-                <a href="single.html"><img src="images/ng8.jpg" alt=" "/></a>
-            </div>
-            <div class="clearfix"></div>
-        </div>
         <div class="col-md-4 footer-right-w3">
-            <a href="index.html"><h4>Kids <img src="images/f1.png" alt=" "/> Game</h4></a>
-            <p>Donec lobortis diam eu auctor porta. Phasellus in elementum tortor, sit amet imperdiet urna pellentesque
-                non risus porta.</p>
+            <a href="index.html"><h4>Fallen <img src="images/f1.png" alt=" "/> Mage</h4></a>
+            <p>Free your kingdom now</p>
             <p class="agileinfo">Suspendisse convallis malesuada libero, non rutrum arcu pellentesque lacinia.</p>
         </div>
         <div class="clearfix"></div>
