--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <title>The Fallen Mage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="keywords" content="Kids Video Game Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"/>
     <script type="application/x-javascript"> addEventListener("load", function () {
         setTimeout(hideURLbar, 0);
     }, false);
@@ -43,7 +41,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="index.html"><h1>Kids <img src="images/c1.png" alt=" "/> Game</h1></a>
+                <a href="index.html"><h1>Fallen <img src="images/logo.png" alt=" "/> Mage</h1></a>
             </div>
 
             <div id="navbar" class="navbar-collapse collapse">
@@ -99,37 +97,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <li>
                 <div class="trend-grid">
                     <h4>Character Leveling</h4>
-                    <img src="images/tg1.jpg" alt=" " class="img-responsive"/>
+                    <img src="images/f1.jpeg" alt=" " class="img-rounded"/>
+                </div>
+            </li>
+            <li>
+                <div class="trend-grid">
+                    <h4>Abilities</h4>
+                    <img src="images/f2.jpeg" alt=" " class="img-rounded"/>
                 </div>
             </li>
             <li>
                 <div class="trend-grid">
                     <h4>Skill Tree</h4>
-                    <img src="images/tg2.jpg" alt=" " class="img-responsive"/>
+                    <img src="images/f3.jpeg" alt=" " class="img-rounded" />
                 </div>
             </li>
             <li>
                 <div class="trend-grid">
                     <h4>Inventory</h4>
-                    <img src="images/tg3.jpg" alt=" " class="img-responsive"/>
+                    <img src="images/f4.jpeg" alt=" " class="img-rounded"/>
                 </div>
             </li>
             <li>
                 <div class="trend-grid">
-                    <h4>Currency</h4>
-                    <img src="images/tg4.jpg" alt=" " class="img-responsive"/>
+                    <h4>Currency &amp; Crafting</h4>
+                    <img src="images/f5.jpeg" alt=" " class="img-rounded"/>
                 </div>
             </li>
             <li>
                 <div class="trend-grid">
                     <h4>Gear Enhancement</h4>
-                    <img src="images/tg4.jpg" alt=" " class="img-responsive"/>
-                </div>
-            </li>
-            <li>
-                <div class="trend-grid">
-                    <h4>Voice-Over</h4>
-                    <img src="images/tg4.jpg" alt=" " class="img-responsive"/>
+                    <img src="images/f6.jpeg" alt=" " class="img-rounded"/>
                 </div>
             </li>
         </ul>
@@ -165,43 +163,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!-- //trend -->
 
-
-<!-- services-->
-<div class="services-agileits-w3layouts">
-    <div class="container">
-        <h3>Services</h3>
-        <div class="col-md-3 service-grid-agileits service-grid-agileits-top">
-            <span class="glyphicon glyphicon-sort-by-attributes" aria-hidden="true"></span>
-            <h4>Quis tortor</h4>
-            <p>Curabitur suscipit porttitor aliquam. Etiam id placerat purus. Integer sodales elit eget arcu
-                placerat.</p>
-            <a href="single.html">Read More</a>
-        </div>
-        <div class="col-md-3 service-grid-agileits">
-            <span class="glyphicon glyphicon-random" aria-hidden="true"></span>
-            <h4>Eget arcu</h4>
-            <p>Curabitur suscipit porttitor aliquam. Etiam id placerat purus. Integer sodales elit eget arcu
-                placerat.</p>
-            <a href="single.html">Read More</a>
-        </div>
-        <div class="col-md-3 service-grid-agileits service-grid-agileits-bottom">
-            <span class="glyphicon glyphicon-yen" aria-hidden="true"></span>
-            <h4>Risus porta</h4>
-            <p>Curabitur suscipit porttitor aliquam. Etiam id placerat purus. Integer sodales elit eget arcu
-                placerat.</p>
-            <a href="single.html">Read More</a>
-        </div>
-        <div class="col-md-3 service-grid-agileits service-grid-agileits-bottom">
-            <span class="glyphicon glyphicon-object-align-right" aria-hidden="true"></span>
-            <h4>Proin sapien</h4>
-            <p>Curabitur suscipit porttitor aliquam. Etiam id placerat purus. Integer sodales elit eget arcu
-                placerat.</p>
-            <a href="single.html">Read More</a>
-        </div>
-        <div class="clearfix"></div>
-    </div>
-</div>
-<!-- //services-->
 
 <!-- new games -->
 <div class="new-w3-agile">
@@ -268,7 +229,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!-- //new games-->
 
-
 <div class="services-bottom-w3-agileits">
     <div class="container">
         <div class="wthree_info">
@@ -277,22 +237,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <ul class="slides">
                         <li>
                             <div class="wthree_info_grid">
-                                <h3>Duis aute dolor reprehenderit</h3>
-                                <p>Excepteur sint occaecat cupidatat non proident, sunt officia.</p>
+                                <h3>RPG</h3>
+                                <p>Allow the player to customize his character, then set out on a journey towards conquering the vast world of The Fallen Mage by meeting NPCs in different cities and providing services and tasks to them which in turn reward the player with currency to buy items from game merchants and experience points that will increase the player's level and many more Other bonuses.</p>
                                 <a href="single.html" class="learn">Learn More</a>
                             </div>
                         </li>
                         <li>
                             <div class="wthree_info_grid">
-                                <h3>Aliquip commodo consequat</h3>
+                                <h3>Offline</h3>
                                 <p>Curabitur lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                 <a href="single.html" class="learn">Learn More</a>
                             </div>
                         </li>
                         <li>
                             <div class="wthree_info_grid">
-                                <h3>Quis autem vel eum iure ea</h3>
-                                <p>Phasellus ornare consectetur erat, eu vehicula orci finibus at.</p>
+                                <h3>Competitions</h3>
+                                <p>Taking part in competitions will not only level up your gaming skills and let you meet new gamers to play with it will also get you involved in the community.</p>
                                 <a href="single.html" class="learn">Learn More</a>
                             </div>
                         </li>
@@ -324,59 +284,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <h4>Contact</h4>
             <ul>
                 <li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></li>
-                <li><a href="mailto:example@mail.com"><h6>ex@mail.com</h6></a></li>
+                <li><a href="mailto:tjsummour17@gmail.com"><h6>tjsummour17@gmail.com</h6></a></li>
             </ul>
             <ul>
                 <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></li>
-                <li><h6>+18045678834</h6></li>
+                <li><h6>+962786642919</h6></li>
             </ul>
             <ul>
                 <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></li>
-                <li><h6>4th Avenue,London</h6></li>
-            </ul>
-            <ul>
-                <li><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span></li>
-                <li><h6>(0033)6544 5453 644</h6></li>
+                <li><h6>Amman - Jordan</h6></li>
             </ul>
         </div>
-        <div class="col-md-5 footer-middle-w3">
-            <h4>Latest Games</h4>
-            <div class="col-md-3 img-w3-agile">
-                <a href="single.html"><img src="images/ng1.jpg" alt=" "/></a>
-            </div>
-            <div class="col-md-3 img-w3-agile">
-                <a href="single.html"><img src="images/ng2.jpg" alt=" "/></a>
-            </div>
-            <div class="col-md-3 img-w3-agile">
-                <a href="single.html"><img src="images/ng3.jpg" alt=" "/></a>
-            </div>
-            <div class="col-md-3 img-w3-agile">
-                <a href="single.html"><img src="images/ng4.jpg" alt=" "/></a>
-            </div>
-            <div class="col-md-3 img-w3-agile footer-middle-wthree">
-                <a href="single.html"><img src="images/ng5.jpg" alt=" "/></a>
-            </div>
-            <div class="col-md-3 img-w3-agile footer-middle-wthree">
-                <a href="single.html"><img src="images/ng6.jpg" alt=" "/></a>
-            </div>
-            <div class="col-md-3 img-w3-agile footer-middle-wthree">
-                <a href="single.html"><img src="images/ng7.jpg" alt=" "/></a>
-            </div>
-            <div class="col-md-3 img-w3-agile footer-middle-wthree">
-                <a href="single.html"><img src="images/ng8.jpg" alt=" "/></a>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-        <div class="col-md-4 footer-right-w3">
-            <a href="index.html"><h4>Kids <img src="images/f1.png" alt=" "/> Game</h4></a>
-            <p>Donec lobortis diam eu auctor porta. Phasellus in elementum tortor, sit amet imperdiet urna pellentesque
-                non risus porta.</p>
-            <p class="agileinfo">Suspendisse convallis malesuada libero, non rutrum arcu pellentesque lacinia.</p>
-        </div>
-        <div class="clearfix"></div>
-        <div class="copyright">
-            <p>&copy; 2020 Kids Video Game. All Rights Reserved | Design by <a href="http://w3layouts.com/"
-                                                                               target="_blank"> W3layouts </a></p>
+        <div class="col-md-3 footer-right-w3">
+            <a href="index.html"><h4>Fallen <img src="images/f1.png" alt=" "/> Mage</h4></a>
+            <p>Free your kingdom now ...</p>
         </div>
     </div>
 </div>
