--- a/news.html
+++ b/news.html
@@ -32,7 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a  href="index.html"><h1>Kids <img src="images/c1.png" alt=" " /> Game</h1></a>
+					<a href="index.html"><h1>Fallen <img src="images/logo.png" alt=" "/> Mage</h1></a>
 				</div>
 
 				<div id="navbar" class="navbar-collapse collapse">
@@ -153,20 +153,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="footer">
 	<div class="container">
 		<div class="col-md-3 footer-left-w3">
-			<h4>Contact</h4>
-			<ul>
-				<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></li>
-				<li><a href="mailto:example@mail.com"><h6>ex@mail.com</h6></a></li>
-			</ul>
-			<ul>
-				<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></li>
-				<li><h6>+18045678834</h6></li>
-			</ul>
-			<ul>
-				<li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></li>
-				<li><h6>4th Avenue,London</h6></li>
-			</ul>
-		</div>
+            <h4>Contact</h4>
+            <ul>
+                <li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></li>
+                <li><a href="mailto:tjsummour17@gmail.com"><h6>tjsummour17@gmail.com</h6></a></li>
+            </ul>
+            <ul>
+                <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></li>
+                <li><h6>+962786642919</h6></li>
+            </ul>
+            <ul>
+                <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></li>
+                <li><h6>Amman - Jordan</h6></li>
+            </ul>
+        </div>
 		<div class="col-md-5 footer-middle-w3">
 			<h4>Latest Games</h4>
 			<div class="col-md-3 img-w3-agile">
@@ -197,8 +197,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="col-md-4 footer-right-w3">
 			<a href="index.html"><h4>Kids <img src="images/f1.png" alt=" " /> Game</h4></a>
-			<p>Donec lobortis diam eu auctor porta. Phasellus in elementum tortor, sit amet imperdiet urna pellentesque non risus porta.</p>
-			<p class="agileinfo">Suspendisse convallis malesuada libero, non rutrum arcu pellentesque lacinia.</p>
+			<p>Free your kingdom now</p>
 		</div>
 		<div class="clearfix"></div>
 
