--- a/single.html
+++ b/single.html
@@ -1,231 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>The Fallen Mage</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Kids Video Game Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- css -->
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
-<!--// css -->
-<!-- font -->
-<link href='//fonts.googleapis.com/css?family=Josefin+Sans:400,100,100italic,300,300italic,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
-<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
-<!-- //font -->
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.js"></script>
+    <title>The Fallen Mage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
+    <script type="application/x-javascript"> addEventListener("load", function () {
+        setTimeout(hideURLbar, 0);
+    }, false);
+
+    function hideURLbar() {
+        window.scrollTo(0, 1);
+    } </script>
+    <!-- css -->
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
+    <!--// css -->
+    <!-- font -->
+    <link href='//fonts.googleapis.com/css?family=Josefin+Sans:400,100,100italic,300,300italic,400italic,600,600italic,700,700italic'
+          rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic'
+          rel='stylesheet' type='text/css'>
+    <!-- //font -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
 </head>
-<body> 
+<body>
 <!-- banner -->
 <div class="sub-banner">
-		<!-- Navbar -->
-		<nav class="navbar navbar-default">
-			<div class="container">
+    <!-- Navbar -->
+    <nav class="navbar navbar-default">
+        <div class="container">
 
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a  href="index.html"><h1>Kids <img src="images/c1.png" alt=" " /> Game</h1></a>
-				</div>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="index.html"><h1>Fallen <img src="images/logo.png" alt=" "/> Mage</h1></a>
+            </div>
 
-				<div id="navbar" class="navbar-collapse collapse">
-					<ul class="nav navbar-nav navbar-right">
-						<li class="hover-effect"><a href="index.html">Home</a></li>
-						<li class="hover-effect"><a href="about.html">About</a></li>
-						<li class="hover-effect"><a href="games.html">Download</a></li>
-						<li class="hover-effect"><a href="news.html">News</a></li>
-						<li class="hover-effect"><a href="contact.html">Contact</a></li>
-					</ul>
-				</div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hover-effect"><a href="index.html">Home</a></li>
+                    <li class="hover-effect"><a href="about.html">About</a></li>
+                    <li class="hover-effect"><a href="games.html">Download</a></li>
+                    <li class="hover-effect"><a href="news.html">News</a></li>
+                    <li class="hover-effect"><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
 
-			</div>
-		</nav>
+        </div>
+    </nav>
 </div>
 <!-- banner -->
-<!-- breadcrumbs -->
-	<div class="agileits_breadcrumbs">
-		<div class="container">
-			<div class="agileits_breadcrumbs_left">
-				<ul>
-					<li><a href="index.html">Home</a><i>|</i></li>
-					<li>Single</li>
-				</ul>
-			</div>
-			<div class="agileits_breadcrumbs_right">
-				<h3>Single</h3>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-<!-- //breadcrumbs -->
-<!-- single -->
-	<div class="blog">
-		<div class="container">
-			<div class="col-md-7 wthree_blog_left">
-				<div class="wthree_blog_left_grid">
-					<div class="wthree_blog_left_grid_slider">
-						<img src="images/s1.jpg" alt=" " class="img-responsive" />
-					</div>
-					<h4>Kids Video Game</h4>
-					<h3>facilisis velit vitae gravida imperdiet</h3>
-					<ul>
-						<li><span class="glyphicon glyphicon-user" aria-hidden="true"></span><a href="#">Jan Mark</a><i>|</i></li>
-						<li><span class="glyphicon glyphicon-heart" aria-hidden="true"></span><a href="#">20</a><i>|</i></li>
-						<li><span class="glyphicon glyphicon-tag" aria-hidden="true"></span><a href="#">5</a><i>|</i></li>
-						<li><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Voluptatibus</li>
-					</ul>
-					<p>Duis venenatis, mi quis malesuada ultricies, nisi nisl posuere sapien,
-						id egestas lectus urna et massa. Morbi mauris turpis, posuere auctor auctor 
-						ornare, auctor nec lectus. Class aptent taciti sociosqu ad litora torquent 
-						per conubia nostra, per inceptos himenaeos.
-						<i>Nulla faucibus, arcu at consequat vulputate, turpis metus blandit urna, 
-						quis suscipit orci nibh nec est. Phasellus tempus augue turpis. Fusce nec 
-						tellus blandit, ullamcorper sapien vel, placerat erat. Nam non massa elit. 
-						Morbi placerat molestie felis. Integer facilisis velit leo, vitae gravida 
-						elit fringilla nec.</i>Quisque id nunc nec risus molestie aliquam. 
-						Donec ex eros, lobortis et lorem quis, sagittis malesuada lectus. 
-						Suspendisse ornare sed purus a imperdiet. Integer viverra nisi orci, 
-						in volutpat leo ornare vitae.</p>
-				</div>
-				<div class="agileits_share">
-					<ul>
-						<li><a class="linkedin" href="#"></a></li>
-						<li><a class="google" href="#"></a></li>
-						<li><a class="twitter" href="#"></a></li>
-						<li><a class="facebook" href="#"></a></li>
-					</ul>
-				</div>
-				
-				<div class="agileits_reply">
-					<h3>Leave a reply</h3>
-					<form action="#" method="post">
-						<input type="text" name="Name" placeholder="Name" required="">
-						<input type="email" name="Email" placeholder="Email" required="">
-						<input type="text" name="Subject" placeholder="Subject" required="">
-						<textarea name="Message" placeholder="Type your comment..." required=""></textarea>
-						<input type="submit" value="Submit">
-					</form>
-				</div>
-			</div>
-			<div class="col-md-5 wthree_blog_right">
-				<div class="w3ls_search">
-					<form action="#" method="post">
-						<input type="text" name="Search" placeholder="Search on our blog" required="">
-						<input type="submit" value=" ">
-					</form>
-				</div>
-				<div class="w3l_categories">
-					<h3>Categories</h3>
-					<ul>
-						<li><a href="single.html">Vitae gravida elit fringilla nec sociosqu</a></li>
-						<li><a href="single.html">Morbi mauris turpis, posuere auctor auctor</a></li>
-						<li><a href="single.html">Class aptent taciti sociosqu litora torquent</a></li>
-						<li><a href="single.html">Duis venenatis, mi quis malesuada ultricies</a></li>
-						<li><a href="single.html">Egestas lectus urna et massa morbi mauris</a></li>
-						<li><a href="single.html">Torquent conubia nostra inceptos himenaeos</a></li>
-						<li><a href="single.html">Urna et massa morbi mauris turpis, posuere</a></li>
-					</ul>
-				</div>
-				
-				<div class="w3l_archives">
-					<h3>Archives</h3>
-					<ul>
-						<li>2 August 2020</li>
-						<li>14 August 2020</li>
-						<li>23 August 2020</li>
-						<li>8 September 2020</li>
-						<li>18 September 2020</li>
-					</ul>
-				</div>
-				<div class="w3agile_flickr_posts">
-					<h3>Flickr Posts</h3>
-					<div class="w3agile_flickr_post_left">
-						<a href="single.html"><img src="images/ng1.jpg" alt=" " class="img-responsive" /></a>
-					</div>
-					<div class="w3agile_flickr_post_left">
-						<a href="single.html"><img src="images/ng2.jpg" alt=" " class="img-responsive" /></a>
-					</div>
-					<div class="w3agile_flickr_post_left">
-						<a href="single.html"><img src="images/ng3.jpg" alt=" " class="img-responsive" /></a>
-					</div>
-					<div class="w3agile_flickr_post_left">
-						<a href="single.html"><img src="images/ng4.jpg" alt=" " class="img-responsive" /></a>
-					</div>
-					<div class="w3agile_flickr_post_left">
-						<a href="single.html"><img src="images/ng5.jpg" alt=" " class="img-responsive" /></a>
-					</div>
-					<div class="w3agile_flickr_post_left">
-						<a href="single.html"><img src="images/ng6.jpg" alt=" " class="img-responsive" /></a>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-<!-- //single -->	
+
+<div class="about-agileinfo" id="about">
+    <div class="container">
+        <h2>About Us</h2>
+        <div class="about-grids-w3-agileits">
+            <div class="col-md-6 about-grid-left-agileits-w3layouts">
+                <p style="font-size: large"><b>The Fallen Mage</b> is directed to gamers all around the world, with
+                    Arabic gamers in mind since it is going to fully support both English and Arabic languages. The game
+                    will provide a unique gaming experience.
+
+                    Allow the player to customize their character, then embark on a journey towards conquering the vast
+                    world of The Fallen Mage by meeting NPCs in different cities and doing favors and quests for them
+                    which in turn reward the player with currency to buy items from the in-game merchants, experience
+                    points that will increase the player’s level and many other rewards. Also they’ll have access to an
+                    arsenal of different combat abilities which will allow them to approach the battle exactly the way
+                    they want. There will also be a skill tree where the player can allocate points that they gain every
+                    level to customize their character. The player will also have an inventory where they can store all
+                    the items and equipment they collect. A great addition to the game will be the crafting system,
+                    where items that are collected during the game can be used for creating different equipment and
+                    items to make the character grow stronger. We’ll also introduce another way for increasing the
+                    character’s power, which is gear enhancement where you can use gems that are randomly dropped by
+                    monsters to enhance your equipment.
+                </p>
+            </div>
+            <div class="col-md-6 about-grid-right-w3-agile">
+                <div class="grid-w3ls">
+                    <img src="images/about.jpg" alt=" " class="img-responsive"/>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+</div>
 
 <!-- footer -->
 <div class="footer">
-	<div class="container">
-		<div class="col-md-3 footer-left-w3">
-			<h4>Contact</h4>
-			<ul>
-				<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></li>
-				<li><a href="mailto:example@mail.com"><h6>ex@mail.com</h6></a></li>
-			</ul>
-			<ul>
-				<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></li>
-				<li><h6>+18045678834</h6></li>
-			</ul>
-			<ul>
-				<li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></li>
-				<li><h6>4th Avenue,London</h6></li>
-			</ul>
-		</div>
-		<div class="col-md-5 footer-middle-w3">
-			<h4>Latest Games</h4>
-			<div class="col-md-3 img-w3-agile">
-				<a href="single.html"><img src="images/ng1.jpg" alt=" " /></a>
-			</div>
-			<div class="col-md-3 img-w3-agile">
-				<a href="single.html"><img src="images/ng2.jpg" alt=" " /></a>
-			</div>
-			<div class="col-md-3 img-w3-agile">
-				<a href="single.html"><img src="images/ng3.jpg" alt=" " /></a>
-			</div>
-			<div class="col-md-3 img-w3-agile">
-				<a href="single.html"><img src="images/ng4.jpg" alt=" " /></a>
-			</div>
-			<div class="col-md-3 img-w3-agile footer-middle-wthree">
-				<a href="single.html"><img src="images/ng5.jpg" alt=" " /></a>
-			</div>
-			<div class="col-md-3 img-w3-agile footer-middle-wthree">
-				<a href="single.html"><img src="images/ng6.jpg" alt=" " /></a>
-			</div>
-			<div class="col-md-3 img-w3-agile footer-middle-wthree">
-				<a href="single.html"><img src="images/ng7.jpg" alt=" " /></a>
-			</div>
-			<div class="col-md-3 img-w3-agile footer-middle-wthree">
-				<a href="single.html"><img src="images/ng8.jpg" alt=" " /></a>
-			</div>
-			<div class="clearfix"></div>
-		</div>
-		<div class="col-md-4 footer-right-w3">
-			<a href="index.html"><h4>Kids <img src="images/f1.png" alt=" " /> Game</h4></a>
-			<p>Donec lobortis diam eu auctor porta. Phasellus in elementum tortor, sit amet imperdiet urna pellentesque non risus porta.</p>
-			<p class="agileinfo">Suspendisse convallis malesuada libero, non rutrum arcu pellentesque lacinia.</p>
-		</div>
-		<div class="clearfix"></div>
+    <div class="container">
+        <div class="col-md-3 footer-left-w3">
+            <h4>Contact</h4>
+            <ul>
+                <li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></li>
+                <li><a href="mailto:tjsummour17@gmail.com"><h6>tjsummour17@gmail.com</h6></a></li>
+            </ul>
+            <ul>
+                <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></li>
+                <li><h6>+962786642919</h6></li>
+            </ul>
+            <ul>
+                <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></li>
+                <li><h6>Amman - Jordan</h6></li>
+            </ul>
+        </div>
+        <div class="col-md-4 footer-right-w3">
+            <a href="index.html"><h4>Fallen <img src="images/f1.png" alt=" "/> Mage</h4></a>
+            <p>Free your kingdom now</p>
+        </div>
+        <div class="clearfix"></div>
 
-	</div>
+    </div>
 </div>
 
 <!-- //footer -->
